// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when not ready 1`] = `
<View
  style={
    Object {
      "marginVertical": 16,
      "paddingHorizontal": 16,
    }
  }
  testID="SnapshotCeloGoldOverview"
>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "fontFamily": "Jost-Medium",
        "fontSize": 22,
        "lineHeight": 28,
        "marginBottom": 8,
      }
    }
  >
    yourGoldBalance
  </Text>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "fontFamily": "Inter-Regular",
        "fontSize": 24,
        "lineHeight": 27,
        "marginBottom": 8,
      }
    }
    testID="CeloBalance"
  >
    <Text
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
      testID="undefined/value"
    >
      
      
      55.000
    </Text>
  </Text>
  <Text
    style={
      Object {
        "color": "#9CA4A9",
        "fontFamily": "Inter-Regular",
        "fontSize": 16,
        "lineHeight": 22,
      }
    }
  >
    Equal to 
    <Text
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
      testID="undefined/value"
    >
      
      -
    </Text>
  </Text>
</View>
`;

exports[`renders correctly when ready 1`] = `
<View
  style={
    Object {
      "marginVertical": 16,
      "paddingHorizontal": 16,
    }
  }
  testID="SnapshotCeloGoldOverview"
>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "fontFamily": "Jost-Medium",
        "fontSize": 22,
        "lineHeight": 28,
        "marginBottom": 8,
      }
    }
  >
    yourGoldBalance
  </Text>
  <Text
    style={
      Object {
        "color": "#2E3338",
        "fontFamily": "Inter-Regular",
        "fontSize": 24,
        "lineHeight": 27,
        "marginBottom": 8,
      }
    }
    testID="CeloBalance"
  >
    <Text
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
      testID="undefined/value"
    >
      
      
      55.000
    </Text>
  </Text>
  <Text
    style={
      Object {
        "color": "#9CA4A9",
        "fontFamily": "Inter-Regular",
        "fontSize": 16,
        "lineHeight": 22,
      }
    }
  >
    Equal to 
    <Text
      style={
        Array [
          undefined,
          Object {
            "color": undefined,
          },
        ]
      }
      testID="undefined/value"
    >
      
      ₱
      550.00
    </Text>
  </Text>
</View>
`;
